--- a/index.css
+++ b/index.css
@@ -113,3 +113,48 @@ body {
     border-radius: 20px;
 }
 
+/*fried rice styles*/
+
+.homepage a {
+    text-decoration: none;
+    font-style: normal;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: large;
+    color: black;
+}
+
+
+.recipeCard {
+    margin: 48px 324px;
+    padding: 2em;
+    background-color: white;
+    border-radius: 20px;
+}
+
+.riceImage img {
+    border-radius: 4px;
+}
+
+h1 {
+    text-align: center;
+}
+
+.riceImage {
+    text-align: center;
+    
+}
+
+.info {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: inherit;
+    font-weight: bold;
+    font-size: large;
+}
+
+.ingredients {
+    margin: 10px;
+    padding: 15px;
+    background-color: rgba(230, 77, 192, 0.801);
+    border-radius: 10px;
+}
