--- a/index.css
+++ b/index.css
@@ -113,7 +113,7 @@ body {
     border-radius: 20px;
 }
 
-/*fried rice styles*/
+/*recipe styles*/
 
 .homepage a {
     text-decoration: none;
@@ -132,7 +132,7 @@ body {
     border-radius: 20px;
 }
 
-.riceImage img {
+.recipeImage img {
     border-radius: 4px;
 }
 
@@ -140,7 +140,7 @@ h1 {
     text-align: center;
 }
 
-.riceImage {
+.recipeImage {
     text-align: center;
     
 }
